--- a/_imports/article-body.html
+++ b/_imports/article-body.html
@@ -2,6 +2,56 @@
 
 <p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
 
+<p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+
+<sergey-import src="link-box" />
+
+<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+
+<p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+
+<sergey-import src="link-box-images" />
+
+<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+
+<p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+
+<sergey-import src="link-box-image-single" />
+
+<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+
+<p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+
+<sergey-import src="link-box-single" />
+
+<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+
+<p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+
+<sergey-import src="card-list" />
+
+<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+
+<p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+
+<sergey-import src="card-list-row" />
+
+<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+
+<p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+
+<sergey-import src="card-list-grid" />
+
+<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+
+<p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+
+<sergey-import src="card-list-stories" />
+
+<p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
+
+<p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
+
 <sergey-import src="blockquote" />
 
 <sergey-import src="photo-gallery" />
