--- a/_imports/article-topper-context-related.html
+++ b/_imports/article-topper-context-related.html
@@ -6,7 +6,7 @@
 		Food & Drink
 	</a>
 	<a href="#" class="inline-block slant-clip px-2 bg-purple text-white italic uppercase font-normal text-sm mr-2">Related</a>
-	<a href="#" class="section mr-2 hover:text-purple">Which area grocery store has the best prices <span class="text-purple ot-ss03 text-sm font-medium ml-0.5">↗</span></a>
+	<a href="#" class="section mr-2 hover:text-purple">Which area grocery store has the best prices <span class="text-purple arrows text-sm ml-0.5">↗</span></a>
 
 	</div>
 
