--- a/_imports/author-block.html
+++ b/_imports/author-block.html
@@ -4,7 +4,7 @@
 
     <div class="content max-w-[calc(100%-6rem)]">
     <p class="name font-condensed font-black text-lg leading-tight">Kyle Goon</p>
-    <p class="leading-tight font-light text-sm text-gray truncate"><a href="#">kyle.goon.with.a.suuuuper.longer.than.normal.email.address.that.runs.off@thebaltimorebanner.org</a></p>
+    <p class="leading-tight font-light text-sm text-black-500 truncate"><a href="#">kyle.goon.with.a.suuuuper.longer.than.normal.email.address.that.runs.off@thebaltimorebanner.org</a></p>
     </div>
 
     <div class="w-16 h-16 bg-orange">
@@ -42,12 +42,12 @@
     <div class="lg:flex">
     <div class="article mb-4">
     <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Undercooked appetizer’: Zay Flowers shines,</strong> but recievers frustrated with performance in Texans win</a></h4>
-    <time class="leading-tight font-light text-sm text-gray">Sep 1, 2023</time>
+    <time class="leading-tight font-light text-sm text-black-500">Sep 1, 2023</time>
     </div>
 
     <div class="article mb-4">
     <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Kyle Goon: J.K. Dobbins did what he could</strong> for a new deal this offseason. His injury cruelly illustrates why.</a></h4>
-    <time class="leading-tight font-light text-sm text-gray">Sep 1, 2023</time>
+    <time class="leading-tight font-light text-sm text-black-500">Sep 1, 2023</time>
     </div>
     </div>
     
