--- a/_imports/blockquote-long.html
+++ b/_imports/blockquote-long.html
@@ -4,7 +4,7 @@
 	<p class="font-bold font-condensed text-2xl leading-tight lg:text-3xl tracking-tight">Baltimore's spirit shone as justice prevailed. It's moments like these that remind me why I became a lawyer. This is a long quote so the type is a bit smaller for a better fit.</p>
 	<cite class="not-italic text-base leading-tight font-normal mt-4 block">
 		<p class="text-lg tracking-tight"><strong>Kevin Zeitler </strong></p>
-		<p class="text-gray">Lawyer</p> 
+		<p class="text-black-500">Lawyer</p> 
 	</cite>
 </blockquote>
 
