--- a/_imports/head.html
+++ b/_imports/head.html
@@ -15,6 +15,6 @@
   </sergey-slot>
 </head>
 
-<body class="pb-32 lg:pt-14 overflow-x-hidden">
+<body class="lg:pt-14 overflow-x-hidden">
 
   <sergey-import src="header" />
