--- a/_imports/header.html
+++ b/_imports/header.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="cta flex-none">
-      <a href="#" class="block leading-none text-black underline decoration-1 decoration-orange hover:decoration-purple underline underline-offset-2">Subscribe for $1</a>
+      <a href="#" class="block leading-none text-black font-medium underline decoration-1 decoration-orange hover:decoration-purple underline decoration-[1.5px] underline-offset-2">Subscribe for $1</a>
     </div>
 
     <div class="icons flex flex-grow lg:flex-none justify-end px-2 gap-2">
