--- a/_imports/photo-gallery.html
+++ b/_imports/photo-gallery.html
@@ -23,7 +23,7 @@
 <div class="meta flex flex-col pt-4 gap-2 lg:gap-4">
 <div class="indicators lg:hidden order-1 flex gap-1 items-center justify-center"></div>
 <div class="arrows order-2 hidden lg:inline-block">
-  <button class="prev w-12 h-12 border hover:text-purple inline-block">←</button><button class="next w-12 h-12 border border-l-0 hover:text-purple inline-block">→</button>
+  <button class="prev w-12 h-12 border hover:text-purple inline-block text-lg"><span class="arrows">←</span></button><button class="next w-12 h-12 border border-l-0 hover:text-purple inline-block text-lg"><span class="arrows">→</span></button>
 </div>
 <div class="captions order-3 lg:order-1 font-condensed font-light text-black-500 leading-tight px-4 lg:px-0"></div>
 </div>
