--- a/_imports/article-topper-feature-black.html
+++ b/_imports/article-topper-feature-black.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="block lg:hidden">
-<figcaption class="my-8 font-light text-gray leading-none text-sm block px-4 lg:px-0">"Just how exactly are you supposed to eat this thing?" is a question you will likely ask after ordering the Yard Dog. Followed by: "Do I really want to be eating this?" (Christina Tkacik)</figcaption>
+<figcaption class="my-8 font-light text-black-500 leading-none text-sm block px-4 lg:px-0">"Just how exactly are you supposed to eat this thing?" is a question you will likely ask after ordering the Yard Dog. Followed by: "Do I really want to be eating this?" (Christina Tkacik)</figcaption>
 </div>
 
 </div>
