--- a/_imports/blockquote.html
+++ b/_imports/blockquote.html
@@ -4,7 +4,7 @@
 		<p class="font-bold font-condensed text-3xl lg:text-4xl tracking-tight">It was obviously an unreal feeling to be back up here.</p>
 		<cite class="not-italic text-base leading-tight font-normal mt-4 block">
 			<p class="text-lg tracking-tight"><strong>Kevin Zeitler </strong></p>
-			<p class="text-gray">Ravens right guard</p> 
+			<p class="text-black-500">Ravens right guard</p> 
 		</cite>
 	</blockquote>
 
