--- a/_imports/card-list.html
+++ b/_imports/card-list.html
@@ -1,14 +1,13 @@
-<div class="block-card-list px-4">
+<div class="block-card-list !my-8">
 
-	<div class="heading">
-		<h3 class="uppercase text-orange font-medium text-sm border-b border-light-gray pb-2 font-condensed">More in Sports</h3>
-	</div>
+	<sergey-import src="overline" />
 
-	<div class="grid grid-cols-2">
+	<div class="items border-t grid grid-cols-2">
 	<div class="item flex flex-col justify-between border-r pr-4 pt-4 pb-4">
 		<div class="content">
-		<h3 class="font-condensed text-lg leading-tight mb-1"><strong>Former Maryland WR Dontay Demus Jr.</strong> among Ravens’ first wave of cuts</h3>
-		<time class="text-sm text-gray mb-4 block">Sep 1, 2023</time>
+		<h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Former Maryland WR Dontay Demus Jr.</strong> among Ravens’ first wave of cuts</h3>
+		<time class="text-sm text-black-500 mb-4 block leading-tight">
+			Sep 1, 2023<div class="sponsored empty:hidden font-bold">Sponsored</div></time>
 		</div>
 		<div class="aspect-square bg-red-300">
 		<img class="object-cover h-full w-full" src="https://www.thebaltimorebanner.com/resizer/StUW4suTlogfAbKLLgJ34s6lNcQ=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/YPDI2OSCBNGZZL25TVSXYBTF3Q.jpg">
@@ -16,8 +15,8 @@
 	</div>
 	<div class="item flex flex-col  pl-4 pt-4 pb-4">
 		<div class="content">
-		<h3 class="font-condensed text-lg leading-tight mb-1"><strong>Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
-		<time class="text-sm text-gray mb-4 block">Sep 1, 2023</time>
+		<h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
+		<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
 		</div>
 		<div class="aspect-square bg-red-300">
 		<img class="object-cover h-full w-full" src="https://www.thebaltimorebanner.com/resizer/vY8R49Q1vupf6S9z9iKknf-uDEs=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/VD2GPVACCFAKLLCP7GGVK73UEQ.jpg">
@@ -29,8 +28,18 @@
 		<div class="aspect-video mb-4 bg-red-300">
 		<img class="object-cover w-full h-full" src="https://www.thebaltimorebanner.com/resizer/MsKcKTiyB1z7Oqid_IwHlFI0mfM=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/UPCIIKTZKNGL7CKMTSHF2GW3PE.jpg">
 		</div>
-		<h3 class="font-condensed text-lg leading-tight mb-1"><strong>Ravens Slant: There was anxiety before Week 1.</strong> After a win vs. Houston, there’s a lot more.</h3>
-		<time class="text-sm text-gray mb-4 block">Sep 1, 2023</time>
-		
+		<h3 class="font-condensed text-2xl leading-none tracking-tight mb-2 [&:has(strong)]:font-light"><strong class="font-bold">Ravens Slant:</strong> There was anxiety before Week 1. After a win vs. Houston, there’s a lot more.</h3>
+		<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
+
+		<div class="related pl-4 border-l mt-6 empty:hidden" >
+			<div class="item content">
+			<h3 class="font-condensed text-xl leading-none mb-2 [&:has(strong)]:font-light"><strong class="font-bold">‘Undercooked appetizer’: Zay Flowers shines,</strong> but receivers frustrated with performance in Texans win</h3>
+			<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
+			</div>
+			<div class="item content">
+			<h3 class="font-condensed text-xl leading-none mb-2 [&:has(strong)]:font-light"><strong class="font-bold">Kyle Goon:</strong> J.K. Dobbins did what he could for a new deal this offseason. His injury cruelly illustrates why.</h3>
+			<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
+			</div>
+		</div>
 	</div>
 </div>
