--- a/_imports/footer.html
+++ b/_imports/footer.html
@@ -1,6 +1,80 @@
-<footer role="contentinfo">
-  <div class="wrapper">
+<div class="bg-black text-white min-h-screen pt-8 pb-16">
 
+  <!-- Middle content for Desktop -->
+  <div class="md:flex justify-between p-4">
 
+    <!-- Top logo and social icons row (Desktop view) -->
+  <div class="md:flex md:flex-col justify-between md:justify-start items-center md:items-start mb-8">
+    <h1 class="text-2xl font-bold mb-4">
+    <a class="inline-block" href="index.html"><img src="assets/images/logo-wordmark.svg" width="300"></a>
+    </h1>
+    <div class="flex">
+      <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
+        <img class="w-6 h-6" src="assets/images/icon-instagram-white.svg" alt="Instagram">
+      </a>
+      <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
+        <img class="w-6 h-6" src="assets/images/icon-linkedin-white.svg" alt="LinkedIn">
+      </a>
+      <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
+        <img class="w-6 h-6" src="assets/images/icon-facebook-white.svg" alt="Facebook">
+      </a>
+      <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
+        <img class="w-6 h-6" src="assets/images/icon-x-white.svg" alt="X / Twitter">
+      </a>
+      <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
+        <img class="w-6 h-6" src="assets/images/icon-mastadon-white.svg" alt="Mastadon">
+      </a>
+      <!-- ... You can add other icons similarly ... -->
+    </div>
   </div>
-</footer>
+
+
+    <!-- Company Column -->
+    <div class="space-y-2 mb-8">
+      <h2 class="font-bold text-2xl font-ultra-condensed">COMPANY</h2>
+      <ul class="space-y-2">
+        <li class="text-lg"><a href="#">About us</a></li>
+        <li class="text-lg"><a href="#">Newsroom policies & code of ethics</a></li>
+        <li class="text-lg"><a href="#">People, culture, & diversity</a></li>
+        <li class="text-lg"><a href="#">Careers</a></li>
+        <li class="text-lg"><a href="#">Creatives in Residence</a></li>
+        <li class="text-lg"><a href="#">Support us</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact Us Column -->
+    <div class="space-y-2 mb-8">
+      <h2 class="font-bold text-2xl font-ultra-condensed">CONTACT US</h2>
+      <ul class="space-y-2">
+        <li class="text-lg"><a href="#">Customer care</a></li>
+        <li class="text-lg"><a href="#">Contact the newsroom & tips</a></li>
+        <li class="text-lg"><a href="#">Advertise with us</a></li>
+        <li class="text-lg"><a href="#">Group & enterprise sales</a></li>
+      </ul>
+    </div>
+
+    <!-- Terms & Services Column -->
+    <div class="space-y-2 mb-8">
+      <h2 class="font-bold text-2xl font-ultra-condensed">TERMS & SERVICES</h2>
+      <ul class="space-y-2">
+        <li class="text-lg"><a href="#">Privacy policy</a></li>
+        <li class="text-lg"><a href="#">Terms of service</a></li>
+        <li class="text-lg"><a href="#">Terms of sale</a></li>
+        <li class="text-lg"><a href="#">Cookie policy</a></li>
+        <li class="text-lg"><a href="#">RSS terms of service</a></li>
+        <li class="text-lg"><a href="#">Submissions & discussion policy</a></li>
+        <li class="text-lg"><a href="#">Ad choices</a></li>
+        <li class="text-lg"><a href="#">Do not sell my personal information</a></li>
+        <li class="text-lg"><a href="#">CA notice at collection and privacy notice</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Legal content row for Desktop -->
+  <div class="md:flex flex-col justify-between p-4 text-black-300">
+    <p class="border-t border-black-500 pt-8 mb-6">&copy; 2023 The Baltimore Banner. All Rights Reserved.</p>
+    <p class="mb-6 md:mb-2">Use of this site constitutes acceptance of our Terms of Service and Privacy Policies</p>
+    <p class="mb-6 md:mb-2">The Baltimore Banner may receive compensation for some links to products and services on this website. Offers may be subject to change without notice.</p>
+    <p class="mb-6 md:mb-2">The Baltimore Banner is a trademark registered in the U.S. for The Venetoulis Institute for Local Journalism, a 501(c)(3) nonprofit organization. Click <a href="#">here</a> to learn more about supporting local journalism.</p>
+  </div>
+</div>
