--- a/_imports/lead-art.html
+++ b/_imports/lead-art.html
@@ -1,4 +1,4 @@
 <figure class="block-lead-art max-w-3xl mx-auto px-4">
 	<img src="https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/QZ5PSNP6FJDGFIJNDKCQJDPUKE.JPG">
-	<figcaption class="font-light text-gray leading-none text-sm block mt-2">Alissa Zhu, reporter with The Baltimore Banner, stands outside of Lee’s Mini Market, in Baltimore. (Jessica Gallagher/The Baltimore Banner)</figcaption>
+	<figcaption class="font-light text-black-500 leading-none text-sm block mt-2">Alissa Zhu, reporter with The Baltimore Banner, stands outside of Lee’s Mini Market, in Baltimore. (Jessica Gallagher/The Baltimore Banner)</figcaption>
 </figure>
