--- a/_imports/link-box.html
+++ b/_imports/link-box.html
@@ -1,31 +1,29 @@
-<div class="block-link-box">
+<div class="block-link-box !my-8">
 
-	<div class="heading">
-		<h3 class="uppercase text-orange font-medium text-sm font-condensed mb-4">More in Sports</h3>
-	</div>
+	<sergey-import src="overline" />
 
-	<div class="item flex gap-4">
+	<div class="item flex gap-4 mb-6 mt-1">
 		<div class="content">
-		<h3 class="font-condensed text-xl leading-tight mb-1"><strong>Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
-		<time class="text-sm text-gray mb-4 block">Sep 1, 2023</time>
+		<h3 class="font-condensed font-bold tracking-tight text-2xl leading-none mb-2">Ravens hope OLB Tyus Bowser will be ready by Week 3; TE Mark Andrews expected back at practice soon</h3>
+		<time class="text-sm text-black-500 block">Sep 1, 2023</time>
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 	</div>
 
-	<div class="item flex gap-4">
+	<div class="item flex gap-4 mb-6">
 		<div class="content">
-		<h3 class="font-condensed text-xl leading-tight mb-1"><strong>Former Maryland WR Dontay Demus Jr.</strong> among Ravens’ first wave of cuts</h3>
-		<time class="text-sm text-gray mb-4 block">Sep 1, 2023</time>
+		<h3 class="font-condensed font-bold tracking-tight text-2xl leading-none mb-2">Former Maryland WR Dontay Demus Jr. among Ravens’ first wave of cuts</h3>
+		<time class="text-sm text-black-500 block">Sep 1, 2023</time>
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 	</div>
 
-	<div class="item flex gap-4">
+	<div class="item flex items-end gap-6 mb-6">
 		<div class="content">
-		<h3 class="font-condensed text-xl leading-tight mb-1"><strong>Kyle Goon: A tale of 2 kickers:</strong> Justin Tucker and Adley Rutschman</h3>
-		<time class="text-sm text-gray mb-4 block">Sep 1, 2023</time>
+		<h3 class="font-condensed font-bold tracking-tight text-2xl leading-none mb-2">Kyle Goon: A tale of 2 kickers: Justin Tucker and Adley Rutschman</h3>
+		<time class="text-sm text-black-500 block">Sep 1, 2023</time>
 		</div>
-		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden">
+		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden mb-2">
 	      <img class="w-full h-full object-cover" src="https://s3.amazonaws.com/arc-authors/baltimorebanner/a2571e9d-eadd-40ab-ab08-8424e57d206e.png">
 	    </div>
 	</div>
