--- a/_imports/media-item-full.html
+++ b/_imports/media-item-full.html
@@ -1,4 +1,4 @@
 <figure class="block-media-item block-media-item-full block-media-item-image !max-w-full !px-0">
 	<img src="https://cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/QZ5PSNP6FJDGFIJNDKCQJDPUKE.JPG">
-	<figcaption class="font-light text-gray leading-none text-sm block mt-2 px-4 max-w-3xl mx-auto">Alissa Zhu, reporter with The Baltimore Banner, stands outside of Lee’s Mini Market, in Baltimore. (Jessica Gallagher/The Baltimore Banner)</figcaption>
+	<figcaption class="font-light text-black-500 leading-none text-sm block mt-2 px-4 max-w-3xl mx-auto">Alissa Zhu, reporter with The Baltimore Banner, stands outside of Lee’s Mini Market, in Baltimore. (Jessica Gallagher/The Baltimore Banner)</figcaption>
 </figure>
