--- a/_imports/pullquote-culture.html
+++ b/_imports/pullquote-culture.html
@@ -3,7 +3,7 @@
 	<blockquote class="block border-y py-6">
 		<p class="font-caslon text-2xl lg:text-3xl tracking-tight">Their cocktails are handcrafted masterpieces, ranging from savory stunners to sweet sippers.</p>
 		<cite class="not-italic text-base leading-tight font-normal mt-4 block">
-			<p class="text-gray font-light">CookHouse Restaurant</p> 
+			<p class="text-black-500 font-light">CookHouse Restaurant</p> 
 		</cite>
 	</blockquote>
 
