--- a/_imports/pullquote-sports.html
+++ b/_imports/pullquote-sports.html
@@ -8,7 +8,7 @@
 		<p class="text-4xl uppercase tracking-tight italic font-black font-expanded">It was obviously an unreal feeling to be back up here.</p>
 		<cite class="empty:hidden not-italic text-base leading-tight font-normal mt-4 block">
 			<p class="text-lg tracking-tight"><strong>Kevin Zeitler </strong></p>
-			<p class="text-gray">Lawyer</p> 
+			<p class="text-black-500">Lawyer</p> 
 		</cite>
 	</blockquote>
 
