--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <sergey-import src="head" />
 
-    <main class="wrapper p-5 lg:grid lg:grid-cols-4 gap-8">
+    <main class="wrapper p-5 lg:grid lg:grid-cols-3 gap-8">
+
+      <div class="col">
 
       <section class="mb-12">
         
@@ -66,6 +68,7 @@
 
       </section>
       
+      </div>
 
       <section class="mb-12">
 
@@ -143,6 +146,8 @@
               <ul class="submenu hidden">
                 <li class="mb-1"><a href="card-list.html">↳ Default</a></li>
                 <li class="mb-1"><a href="card-list-row.html">↳ Row</a></li>
+                <li class="mb-1"><a href="card-list-grid.html">↳ Grid</a></li>
+                <li class="mb-1"><a href="card-list-stories.html">↳ Stories</a></li>
               </ul>
             </li>
 
@@ -170,10 +175,16 @@
             </ul>
           </li>
 
-          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
-            <a class="block mb-2 font-bold" href="link-box.html">Link Box</a>
-            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+            <div class="flex justify-between cursor-pointer toggleMenu">
+              <a class="block mb-2 font-bold">Link Box</a>
+              <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+            </div>
             <ul class="submenu hidden">
+              <li class="mb-1"><a href="link-box.html">↳ Default (No Images)</a></li>
+              <li class="mb-1"><a href="link-box-single.html">↳ Single</a></li>
+              <li class="mb-1"><a href="link-box-images.html">↳ With Images</a></li>
+              <li class="mb-1"><a href="link-box-image-single.html">↳ With Image, Single</a></li>
             </ul>
           </li>
 
@@ -186,6 +197,17 @@
               <li class="mb-1"><a href="media-item.html">↳ Default</a></li>
               <li class="mb-1"><a href="media-item-wide.html">↳ Wide</a></li>
               <li class="mb-1"><a href="media-item-full.html">↳ Full</a></li>
+            </ul>
+          </li>
+
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+            <div class="flex justify-between cursor-pointer toggleMenu">
+              <a class="block mb-2 font-bold">Overline</a>
+              <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+            </div>
+            <ul class="submenu hidden">
+              <li class="mb-1"><a href="overline.html">↳ Default</a></li>
+              <li class="mb-1"><a href="overline-sponsored.html">↳ Sponsored</a></li>
             </ul>
           </li>
 
@@ -224,6 +246,8 @@
         </ul>
 
       </section>
+
+      <div class="col">
 
       <section class="mb-12">
 
@@ -277,6 +301,8 @@
         </ul>
 
       </section>
+
+      </div>
 
 
 <script>
