--- a/_imports/layout-article-feature.html
+++ b/_imports/layout-article-feature.html
@@ -4,6 +4,9 @@
 
 <p>Here’s a sprinkling of reader complaints from my inbox. “The food at Camden Yards has noticeably deteriorated from years past,” wrote one. “I was just blown away about how bad” it was, said another. According to one fan, “The only thing worse than the fare this season is the disorganization, waiting lines and lack of inventory.”</p>
 
+<sergey-import src="blockquote" />
+
+
 <!-- show a square ad on mobile and a wide ad on desktop -->
 <div class="ad-zone !max-w-full !px-0">
 	<div class="block lg:hidden">
