--- a/_imports/offer-skyscraper-light.html
+++ b/_imports/offer-skyscraper-light.html
@@ -1,4 +1,4 @@
-<div class="block-offer block-offer-light max-w-sm mx-auto">
+<div class="block-offer block-offer-skyscraper-light max-w-sm mx-auto">
 
 	<hr class="h-1.5 bg-orange top-clip border-0">
 
