--- a/divider.html
+++ b/divider.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-divider</sergey-template>
 
-    <div class="docs empty:hidden">A simple divider</div>
+    <div class="docs">A simple divider</div>
   
 </sergey-import>
