--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
             </div>
             <ul class="submenu hidden">
               <li class="mb-1"><a href="blockquote.html">↳ Default</a></li>
+              <li class="mb-1"><a href="blockquote-large.html">↳ Large</a></li>
+              <li class="mb-1"><a href="blockquote-large-long.html">↳ Large, Long Text</a></li>
               <li class="mb-1"><a href="blockquote-color.html">↳ Color</a></li>
-              <li class="mb-1"><a href="blockquote-long.html">↳ Long</a></li>
             </ul>
           </li>
 
@@ -264,17 +265,23 @@
                 <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
               </div>
               <ul class="submenu hidden">
-                <li class="mb-1"><a href="offer.html">↳ Offer</a></li>
-                <li class="mb-1"><a href="offer-light.html">↳ Offer, Light</a></li>
+                <li class="mb-1"><a href="offer.html">↳ Offer Skyscraper</a></li>
+                <li class="mb-1"><a href="offer-light.html">↳ Offer Skyscraper, Light</a></li>
+                <li class="mb-1"><a href="offer-hat-small.html">↳ Offer Hat, Small</a></li>
+                <li class="mb-1"><a href="offer-hat-large.html">↳ Offer Hat, Large</a></li>
               </ul>
             </li>
 
-          <li class="flex justify-between border-b border-light-gray pb-2 mb-2">
-            <a class="block mb-2 font-bold" href="paywall-inline.html">Paywall Inline</a>
-            <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
-            <ul class="submenu hidden">
-            </ul>
-          </li>
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+              <div class="flex justify-between cursor-pointer toggleMenu">
+                <a class="block mb-2 font-bold">Paywall</a>
+                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+              </div>
+              <ul class="submenu hidden">
+                <li class="mb-1"><a href="paywall-inline.html">↳ Paywall Inline</a></li>
+                <li class="mb-1"><a href="paywall-hat-large.html">↳ Paywall Hat, Large</a></li>
+              </ul>
+            </li>
 
         </ul>
 
