--- a/paywall-hat-large.html
+++ b/paywall-hat-large.html
@@ -1,10 +1,10 @@
 <sergey-import src="template">
 
     <sergey-template name="source">
-        <sergey-import src="article-topper-full" />
+        <sergey-import src="paywall-hat-large" />
     </sergey-template>
 
-    <sergey-template name="selector">.block-article-topper-full</sergey-template>
+    <sergey-template name="selector">.block-paywall-hat-large</sergey-template>
 
     <div class="docs"></div>
 
