--- a/paywall-inline.html
+++ b/paywall-inline.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-paywall-inline</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
 </sergey-import>
