--- a/_imports/article-topper-feature.html
+++ b/_imports/article-topper-feature.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper block-article-topper-feature">
+<div class="block-article-topper block-article-topper-feature mb-6">
 
 <div class="lg:grid lg:grid-cols-5 items-center lg:h-screen lg:place-content-start">
 
