--- a/_imports/article-topper-wide.html
+++ b/_imports/article-topper-wide.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper block-article-topper-wide md:text-center">
+<div class="block-article-topper block-article-topper-wide md:text-center mb-6">
 
 <sergey-import src="article-topper-context" />
 
