--- a/_imports/article-topper.html
+++ b/_imports/article-topper.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper md:text-center">
+<div class="block-article-topper md:text-center mb-6">
 
 <sergey-import src="article-topper-context" />
 
