--- a/_imports/blockquote-large-long.html
+++ b/_imports/blockquote-large-long.html
@@ -1,4 +1,4 @@
-<div class="block-blockquote block-blockqoute-long py-4">
+<div class="block-blockquote block-blockqoute-large-long py-4">
 
 <blockquote class="block border-y py-6">
 	<p class="font-bold font-condensed text-2xl leading-tight lg:text-3xl tracking-tight">Baltimore's spirit shone as justice prevailed. It's moments like these that remind me why I became a lawyer. This is a long quote so the type is a bit smaller for a better fit.</p>
