--- a/_imports/blockquote.html
+++ b/_imports/blockquote.html
@@ -1,10 +1,10 @@
 <div class="block-blockquote py-4">
 
-	<blockquote class="block border-y py-6">
-		<p class="font-bold font-condensed text-3xl lg:text-4xl tracking-tight">It was obviously an unreal feeling to be back up here.</p>
-		<cite class="not-italic text-base leading-tight font-normal mt-4 block">
-			<p class="text-lg tracking-tight"><strong>Kevin Zeitler </strong></p>
-			<p class="text-black-500">Ravens right guard</p> 
+	<blockquote class="block pl-4 border-l text-lg">
+		<p class="font-medium tracking-tight">“In the heart of Baltimore, amidst the bustling streets and echoing laughter, there was a school that became the beacon of hope for its community. It was not just a place of learning, but a sanctuary where dreams were woven and futures forged. The students there, with fire in their eyes and determination in their steps, fought against the odds to write their own destinies. This school was not just brick and mortar; it was a testament to the power of education and the resilience of a community united in purpose.”</p>
+		<cite class="not-italic font-condensed leading-tight font-normal mt-4 block text-black-500">
+			<p class="tracking-tight"><strong class="font-bold">Kevin Aziz</strong></p>
+			<p class="">Teachers Union</p> 
 		</cite>
 	</blockquote>
 
