--- a/ad-zone-300-600.html
+++ b/ad-zone-300-600.html
@@ -6,7 +6,7 @@
 
     <sergey-template name="selector">.block-ad-zone-300-600</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
   
 </sergey-import>
