--- a/article-topper-feature-black.html
+++ b/article-topper-feature-black.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-article-topper-feature-black</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
 </sergey-import>
