--- a/author-block.html
+++ b/author-block.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.author-block</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
 </sergey-import>
