--- a/card-list-row.html
+++ b/card-list-row.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-card-list-row</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
 </sergey-import>
