--- a/collage-3-up-square.html
+++ b/collage-3-up-square.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-collage</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
 </sergey-import>
