--- a/layout-article.html
+++ b/layout-article.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector"></sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
 </sergey-import>
