--- a/link-box-single.html
+++ b/link-box-single.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-link-box-single</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
 </sergey-import>
