--- a/media-item-full.html
+++ b/media-item-full.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-media-item-full</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
 </sergey-import>
