--- a/overline-sponsored.html
+++ b/overline-sponsored.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-overline-sponsored</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
   
 </sergey-import>
