--- a/pullquote-sports-black.html
+++ b/pullquote-sports-black.html
@@ -6,6 +6,6 @@
 
     <sergey-template name="selector">.block-pullquote-sports-black</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
 </sergey-import>
