--- a/video-vertical.html
+++ b/video-vertical.html
@@ -6,7 +6,7 @@
 
     <sergey-template name="selector">.block-video-vertical</sergey-template>
 
-    <div class="docs empty:hidden"></div>
+    <div class="docs"></div>
 
   
 </sergey-import>
