--- a/_imports/author-block.html
+++ b/_imports/author-block.html
@@ -17,7 +17,7 @@
     <p class="leading-snug font-light">Kyle Goon joined the staff of The Baltimore Banner in April 2023 as a sports columnist. He previously covered the Los Angeles Lakers for the Orange County Register, including... <a href="#">More</a></p>
   </div>
 
-  <div class="links flex gap-2 mb-6">
+  <div class="links flex gap-1 mb-6">
     <a href="#" class="w-6 h-6 block">
       <img class="w-6 h-6" src="assets/images/icon-linkedin.svg" alt="">
     </a>
@@ -40,12 +40,12 @@
     <h3 class="uppercase font-condensed mb-4">More from Kyle Goon</h3>
 
     <div class="lg:flex">
-    <div class="article mb-4">
+    <div class="article mb-4 lg:w-1/2">
     <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Undercooked appetizer’: Zay Flowers shines,</strong> but recievers frustrated with performance in Texans win</a></h4>
     <time class="leading-tight font-light text-sm text-black-500">Sep 1, 2023</time>
     </div>
 
-    <div class="article mb-4">
+    <div class="article mb-4 lg:w-1/2">
     <h4 class="font-condensed leading-tight text-xl"><a href="#"><strong>‘Kyle Goon: J.K. Dobbins did what he could</strong> for a new deal this offseason. His injury cruelly illustrates why.</a></h4>
     <time class="leading-tight font-light text-sm text-black-500">Sep 1, 2023</time>
     </div>
