--- a/_imports/article-topper-full.html
+++ b/_imports/article-topper-full.html
@@ -1,4 +1,4 @@
-<div class="block-article-topper md:center mb-6">
+<div class="block-article-topper md:text-center mb-6">
 
 <sergey-import src="article-topper-context-related" />
 
