--- a/_imports/article-topper-wide-left.html
+++ b/_imports/article-topper-wide-left.html
@@ -4,7 +4,7 @@
 
 <sergey-import src="article-topper-headline" />
 
-<sergey-import src="attribution-date" />
+<sergey-import src="attribution-date-left" />
 
 <sergey-import src="lead-art-wide" />
 
