--- a/_imports/attribution-date-feature.html
+++ b/_imports/attribution-date-feature.html
@@ -1,4 +1,4 @@
-<div class="block-attribution-date font-condensed text-lg font-light my-4 px-4 max-w-3xl mx-auto w-full flex flex-col gap-2 md:flex-row md:items-baseline md:justify-center">
+<div class="block-attribution-date font-condensed text-lg font-light my-4 px-4 max-w-3xl mx-auto w-full flex flex-col gap-2">
 	
 	<div class="attribution">
 		<a href="#" class="underline decoration-1 underline-offset-2">Christina Tkacik</a>
