--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
               <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
             </div>
             <ul class="submenu hidden">
+              <li class="mb-1"><a href="pullquote.html">↳ Default</a></li>
               <li class="mb-1"><a href="pullquote-culture.html">↳ Culture</a></li>
               <li class="mb-1"><a href="pullquote-culture-color-strip.html">↳ Culture Color Strip</a></li>
               <li class="mb-1"><a href="pullquote-sports.html">↳ Sports</a></li>
