--- a/_imports/link-box-images.html
+++ b/_imports/link-box-images.html
@@ -4,32 +4,38 @@
 
 	<div class="items border-t pt-4">
 
+	<a href="#">
 	<div class="item mb-4">
 		<div class="grid grid-cols-4 gap-4">
 		<div class="image">
 		<img class="max-w-full pt-1" src="https://www.thebaltimorebanner.com/resizer/vY8R49Q1vupf6S9z9iKknf-uDEs=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/VD2GPVACCFAKLLCP7GGVK73UEQ.jpg">
 		</div>
 		<div class="content col-span-3">
-		<h3 class="font-condensed text-xl leading-none mb-1 [&:has(strong)]:font-light"><strong class="font-bold">Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
+		<h3 class="font-condensed text-xl leading-none mb-1 font-bold">Ravens hope OLB Tyus Bowser will be ready by Week 3; TE Mark Andrews expected back at practice soon</h3>
+		<time class="text-sm text-black-500 block">Sep 1, 2023</time>
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 		</div>
 	</div>
+	</a>
 
+	<a href="#">
 	<div class="item mb-4">
 		<div class="grid grid-cols-4 gap-4">
 		<div class="image">
 		<img class="max-w-full pt-1" src="https://www.thebaltimorebanner.com/resizer/StUW4suTlogfAbKLLgJ34s6lNcQ=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/YPDI2OSCBNGZZL25TVSXYBTF3Q.jpg">
 		</div>
 		<div class="content col-span-3">
-		<h3 class="font-condensed text-xl leading-none mb-1 [&:has(strong)]:font-light"><strong class="font-bold">Former Maryland WR Dontay Demus Jr.</strong> among Ravens’ first wave of cuts</h3>
+		<h3 class="font-condensed text-xl leading-none mb-1 font-bold">Former Maryland WR Dontay Demus Jr. among Ravens’ first wave of cuts</h3>
+		<time class="text-sm text-black-500 block">Sep 1, 2023</time>
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 		</div>
 	</div>
+	</a>
 
 
-
+	<a href="#">
 	<div class="item mb-4">
 		<div class="grid grid-cols-4 gap-4">
 		<div class="image">
@@ -37,7 +43,10 @@
 		</div>
 		<div class="content col-span-3">
 		<div class="flex items-end gap-6 mb-6">
-		<h3 class="font-condensed text-xl leading-none mb-1 [&:has(strong)]:font-light"><strong class="font-bold">Kyle Goon: A tale of 2 kickers:</strong> Justin Tucker and Adley Rutschman</h3>
+		<div>
+		<h3 class="font-condensed text-xl leading-none mb-1 font-bold">Kyle Goon: A tale of 2 kickers: Justin Tucker and Adley Rutschman</h3>
+		<time class="text-sm text-black-500 block">Sep 1, 2023</time>
+		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden">
 			<img class="w-full h-full object-cover" src="https://s3.amazonaws.com/arc-authors/baltimorebanner/a2571e9d-eadd-40ab-ab08-8424e57d206e.png">
 		</div>
@@ -45,6 +54,7 @@
 		</div>
 		</div>
 	</div>
+	</a>
 
 	</div>
 
