--- a/_imports/link-box-single.html
+++ b/_imports/link-box-single.html
@@ -8,6 +8,7 @@
 	<div class="item flex gap-4">
 		<div class="content">
 		<a href="#"><h3 class="font-normal text-lg leading-tight mb-1"><span class="underline underline-offset-2">Former Maryland WR Dontay Demus Jr. among Ravens’ first wave of cuts</span><span class="arrows text-sm pl-1">↗</span></h3></a>
+		<time class="text-sm text-black-500 block">Sep 1, 2023</time>
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 	</div>
