--- a/_imports/link-box.html
+++ b/_imports/link-box.html
@@ -1,7 +1,7 @@
 <div class="block-link-box !my-8">
 
 	<sergey-import src="overline" />
-
+	<a href="#">
 	<div class="item flex gap-4 mb-6 mt-1">
 		<div class="content">
 		<h3 class="font-condensed font-bold tracking-tight text-2xl leading-none mb-2">Ravens hope OLB Tyus Bowser will be ready by Week 3; TE Mark Andrews expected back at practice soon</h3>
@@ -9,7 +9,8 @@
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 	</div>
-
+	</a>
+	<a href="#">
 	<div class="item flex gap-4 mb-6">
 		<div class="content">
 		<h3 class="font-condensed font-bold tracking-tight text-2xl leading-none mb-2">Former Maryland WR Dontay Demus Jr. among Ravens’ first wave of cuts</h3>
@@ -17,7 +18,8 @@
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 	</div>
-
+	</a>
+	<a href="#">
 	<div class="item flex items-end gap-6 mb-6">
 		<div class="content">
 		<h3 class="font-condensed font-bold tracking-tight text-2xl leading-none mb-2">Kyle Goon: A tale of 2 kickers: Justin Tucker and Adley Rutschman</h3>
@@ -27,5 +29,5 @@
 	      <img class="w-full h-full object-cover" src="https://s3.amazonaws.com/arc-authors/baltimorebanner/a2571e9d-eadd-40ab-ab08-8424e57d206e.png">
 	    </div>
 	</div>
-
+	</a>
 </div>
