--- a/_imports/link-box-image-single.html
+++ b/_imports/link-box-image-single.html
@@ -4,17 +4,20 @@
 
 	<div class="items border-t pt-4">
 
+	<a href="#">
 	<div class="item mb-4">
 		<div class="grid grid-cols-4 gap-4">
 		<div class="image">
 		<img class="max-w-full pt-1" src="https://www.thebaltimorebanner.com/resizer/vY8R49Q1vupf6S9z9iKknf-uDEs=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/VD2GPVACCFAKLLCP7GGVK73UEQ.jpg">
 		</div>
 		<div class="content col-span-3">
-		<h3 class="font-condensed text-xl leading-none mb-1 [&:has(strong)]:font-light"><strong class="font-bold">Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
+		<h3 class="font-condensed text-xl leading-none mb-1 font-bold">Ravens hope OLB Tyus Bowser will be ready by Week 3; TE Mark Andrews expected back at practice soon</h3>
+		<time class="text-sm text-black-500 block">Sep 1, 2023</time>
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 		</div>
 	</div>
+	</a>
 
 	</div>
 
