Card List links
added anchors to all card list components

--- a/_imports/card-list-grid.html
+++ b/_imports/card-list-grid.html
@@ -6,16 +6,18 @@
 
 	<div class="item flex gap-4 first:pr-4 last:pl-4 pt-4">
 		<div class="content">
-		<h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
+		<a href="#"><h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
 		<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
+		</a>
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 	</div>
 
 	<div class="item flex gap-4 first:pr-4 last:pl-4 pt-4">
 		<div class="content">
-		<h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Former Maryland WR Dontay Demus Jr.</strong> among Ravens’ first wave of cuts</h3>
+		<a href="#"><h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Former Maryland WR Dontay Demus Jr.</strong> among Ravens’ first wave of cuts</h3>
 		<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
+		</a>
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 	</div>
@@ -26,8 +28,9 @@
 
 	<div class="item flex gap-4 first:pr-4 last:pl-4 pt-4 [&:has(.avatar>img)]:flex-col">
 		<div class="content">
-		<h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Kyle Goon: A tale of 2 kickers:</strong> Justin Tucker and Adley Rutschman</h3>
+		<a href="#"><h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Kyle Goon: A tale of 2 kickers:</strong> Justin Tucker and Adley Rutschman</h3>
 		<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
+		</a>
 		</div>
 		<div class="avatar w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden mb-4">
 	      <img class="w-full h-full object-cover" src="https://s3.amazonaws.com/arc-authors/baltimorebanner/a2571e9d-eadd-40ab-ab08-8424e57d206e.png">
@@ -36,8 +39,9 @@
 
 	<div class="item flex gap-4 first:pr-4 last:pl-4 pt-4">
 		<div class="content">
-		<h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Ravens Slant:</strong> There was anxiety before Week 1. After a win vs. Houston, there’s a lot more.</h3>
+		<a href="#"><h3 class="font-condensed text-2xl leading-none tracking-tight mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Ravens Slant:</strong> There was anxiety before Week 1. After a win vs. Houston, there’s a lot more.</h3>
 		<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
+		</a>
 		</div>
 		<div class="w-12 h-12 flex-none bg-orange rounded-full overflow-hidden empty:hidden"></div>
 	</div>
