--- a/_imports/card-list-row.html
+++ b/_imports/card-list-row.html
@@ -5,7 +5,7 @@
 	</div>
 
 	<div class="items flex w-full overflow-x-scroll divide-x scroller">
-	<div class="item w-48 flex-none flex flex-col justify-between p-4">
+	<a href="#" class="item w-48 flex-none flex flex-col justify-between p-4">
 		<div class="content">
 		<h3 class="font-condensed text-xl leading-none mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Former Maryland WR Dontay Demus Jr.</strong> among Ravens’ first wave of cuts</h3>
 		<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
@@ -13,8 +13,8 @@
 		<div class="aspect-square bg-red-300">
 		<img class="object-cover h-full w-full" src="https://www.thebaltimorebanner.com/resizer/StUW4suTlogfAbKLLgJ34s6lNcQ=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/YPDI2OSCBNGZZL25TVSXYBTF3Q.jpg">
 		</div>
-	</div>
-	<div class="item w-48 flex-none flex flex-col justify-between p-4">
+	</a>
+	<a href="#" class="item w-48 flex-none flex flex-col justify-between p-4">
 		<div class="content">
 		<h3 class="font-condensed text-xl leading-none mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Ravens hope OLB Tyus Bowser will be ready by Week 3;</strong> TE Mark Andrews expected back at practice soon</h3>
 		<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
@@ -22,8 +22,8 @@
 		<div class="aspect-square bg-red-300">
 		<img class="object-cover h-full w-full" src="https://www.thebaltimorebanner.com/resizer/vY8R49Q1vupf6S9z9iKknf-uDEs=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/VD2GPVACCFAKLLCP7GGVK73UEQ.jpg">
 		</div>
-	</div>
-	<div class="item w-48 flex-none flex flex-col justify-between p-4">
+	</a>
+	<a href="#" class="item w-48 flex-none flex flex-col justify-between p-4">
 		<div class="content">
 		<h3 class="font-condensed text-xl leading-none mb-4 [&:has(strong)]:font-light"><strong class="font-bold">Ravens Slant: There was anxiety before Week 1.</strong> After a win vs. Houston, there’s a lot more.</h3>
 		<time class="text-sm text-black-500 mb-4 block">Sep 1, 2023</time>
@@ -31,7 +31,7 @@
 		<div class="aspect-square bg-red-300">
 		<img class="object-cover h-full w-full" src="https://www.thebaltimorebanner.com/resizer/MsKcKTiyB1z7Oqid_IwHlFI0mfM=/600x400/filters:format(jpg):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/baltimorebanner/UPCIIKTZKNGL7CKMTSHF2GW3PE.jpg">
 		</div>
-	</div>
+	</a>
 	</div>
 
 	<div class="mx-4 border-b">
