--- a/_imports/article-body.html
+++ b/_imports/article-body.html
@@ -6,6 +6,8 @@
 
 <sergey-import src="link-box" />
 
+<sergey-import src="blockquote-color" />
+
 <p>On the eve of October, the standing-room-only crowd at Camden Yards on Saturday night gave a glimpse of what this ballpark could look like — and sound like — in the very near future.</p>
 
 <p>They rooted on relish in the condiment race. They praised <a href="#" class="">right-hander Kyle Gibson</a> for navigating traffic throughout his five scoreless innings. They begged for offense and erupted when it came in the form of Ryan Mountcastle’s run-scoring double with two outs in the seventh inning.</p>
