--- a/_imports/blockquote-color.html
+++ b/_imports/blockquote-color.html
@@ -1,4 +1,4 @@
-<div class="block-blockquote block-blockqoute-color py-4">
+<div class="block-blockquote block-blockqoute-color py-4 !px-0 lg:!px-4 mx-auto">
 
 <blockquote class="block bg-orange text-white p-6">
 	<p class="font-bold font-condensed text-4xl lg:text-5xl leading-tight tracking-tight">It was obviously an unreal feeling to be back up here.</p>
