--- a/index.html
+++ b/index.html
@@ -264,6 +264,17 @@
 
           <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
               <div class="flex justify-between cursor-pointer toggleMenu">
+                <a class="block mb-2 font-bold">Inline Callouts</a>
+                <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
+              </div>
+              <ul class="submenu hidden">
+                <li class="mb-1"><a href="inline-callout-alerts.html">↳ Alerts</a></li>
+                <li class="mb-1"><a href="inline-callout-app-download.html">↳ App Download</a></li>
+              </ul>
+            </li>
+
+          <li class="flex flex-col justify-between border-b border-light-gray pb-2 mb-2">
+              <div class="flex justify-between cursor-pointer toggleMenu">
                 <a class="block mb-2 font-bold">Offer</a>
                 <div class="count empty:hidden rounded-full border border-light-gray inline-block px-3 leading-none flex items-center"></div>
               </div>
